9-23 fix moble alignment

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -25,7 +25,11 @@
   border: 1px solid #ccc; /* Light border */
   border-radius: 10px; /* Slightly rounded corners */
   transition: box-shadow 0.3s; /* Smooth transition for shadow effect */
-  width: 320px;
+  width: 280px;
+}
+
+.home__blog-card img {
+  width: 100%;
 }
 
 .home__blog-card:hover {
@@ -41,17 +45,15 @@
 @media (max-width: 768px) {
   .home__blogs {
     grid-template-columns: repeat(2, 1fr);
-    overflow: hidden;
   }
 }
 
 @media (max-width: 480px) {
   .home__blogs {
     grid-template-columns: 1fr;
-    overflow: hidden;
   }
   .home__title {
-    text-align: center;
+    text-align: left;
     margin-bottom: 20px;
     margin-right: 0;
   }
